--- a/src/components/singelAnimal/singelAnimal.scss
+++ b/src/components/singelAnimal/singelAnimal.scss
@@ -1,2 +1,22 @@
 @use "../../style/variables.scss" as v;
 @use "../../style/mixins.scss" as m;
+
+.primary {
+  display: flex;
+  text-align: center;
+  background-color: #a9da91;
+  padding: 6px;
+  border: none;
+  border-radius: 12px;
+  color: black;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: bold;
+  font-family: 'Lato', sans-serif;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  cursor: pointer;
+  &:hover {
+    background-color: #d4d93b;
+  }
+}
