--- a/src/sections/about/about.scss
+++ b/src/sections/about/about.scss
@@ -1,2 +1,56 @@
 @use "../../style/variables.scss" as v;
 @use "../../style/mixins.scss" as m;
+
+.about__container {
+  display: grid;
+  grid-template-columns: 35% 53%;
+  gap: 12%;
+
+  @include m.desktop {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+}
+
+.about__portrait {
+  height: fit-content;
+  max-height: 40rem;
+  border: 1rem solid v.$color-white;
+  transition: v.$transition;
+}
+
+.about__portrait:hover {
+  border-width: 0;
+}
+
+.about__cards {
+  margin: 3rem 0 1.5rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.5rem;
+  @include m.tablet {
+    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
+  }
+}
+
+.about__card {
+  text-align: center;
+}
+.about__card:hover .about__card-icon {
+  background: v.$color-primary;
+  color: v.$color-white;
+}
+
+h5 {
+  margin: 1rem 0;
+}
+
+p {
+  margin-bottom: 0.8rem;
+  font-size: 1.3rem;
+  color: v.$color-black;
+
+  @include m.tablet {
+  }
+}
