--- a/src/sections/footer/footer.scss
+++ b/src/sections/footer/footer.scss
@@ -1,2 +1,38 @@
 @use "../../style/variables.scss" as v;
 @use "../../style/mixins.scss" as m;
+
+footer {
+  background: v.$color-primary;
+  padding-top: 8rem;
+  box-shadow: 0 -1rem 1.5rem hsla(v.$primary-hue, 68%, 42%, 20%);
+  transition: v.$transition;
+}
+
+footer .nav__menu {
+  justify-content: center;
+}
+
+.footer__socials {
+  width: fit-content;
+  display: flex;
+  gap: 1.5rem;
+  margin: 3rem auto 4rem;
+}
+.footer__socials a {
+  background: v.$color-black;
+  color: v.$color-white;
+  padding: 0.6rem;
+  border-radius: v.$border-radius-3;
+}
+
+.footer__socials a:hover {
+  opacity: 0.7;
+  transform: translateY(-0.5rem);
+}
+
+.footer__copyright {
+  color: white;
+  text-align: center;
+  border-top: 2px solid rgba(0, 0, 0, 0.2);
+  padding: 1.5rem 0;
+}
