--- a/src/sections/home/home.scss
+++ b/src/sections/home/home.scss
@@ -1,2 +1,46 @@
 @use "../../style/variables.scss" as v;
 @use "../../style/mixins.scss" as m;
+
+.home-container {
+  margin-top: 5rem;
+  display: grid;
+  place-items: center;
+  background: v.$color-white;
+  transition: v.$transition;
+  @include m.desktop {
+    margin-top: 0;
+    height: 100vh;
+  }
+
+  &__hero {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+
+    .welcome {
+      width: 35rem;
+      text-align: center;
+      margin: 0.6rem 0 2rem;
+      font-size: 1.5rem;
+
+      @include m.tablet {
+        width: 100%;
+      }
+    }
+
+    &__img-wrapper {
+      width: 50rem;
+      height: 30rem;
+      border-radius: 9rem 9rem 2rem 2rem;
+      overflow: hidden;
+      margin-bottom: 1.5rem;
+      @include m.tablet {
+        width: 30rem;
+        height: 20rem;
+        max-width: 80%;
+        max-height: 50vh;
+      }
+    }
+  }
+}
