--- a/src/sections/nav/nav.scss
+++ b/src/sections/nav/nav.scss
@@ -1,2 +1,40 @@
 @use "../../style/variables.scss" as v;
 @use "../../style/mixins.scss" as m;
+
+nav {
+  width: 100vw;
+  height: 4rem;
+  display: grid;
+  place-items: center;
+  background: v.$color-primary;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9;
+  box-shadow: 0 1rem 1.5rem hsla(v.$primary-hue, 68%, 42%, 20%);
+  transition: v.$transition;
+}
+
+.nav__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav__logo {
+  width: 4.5rem;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.nav__menu {
+  display: flex;
+  gap: 3.5rem;
+}
+
+#theme__icon {
+  background: transparent;
+  color: white;
+  font-size: 2rem;
+  cursor: pointer;
+}
