--- a/src/components/animals/animals.scss
+++ b/src/components/animals/animals.scss
@@ -1,7 +1,8 @@
 @use "../../style/variables.scss" as v;
 @use "../../style/mixins.scss" as m;
 
-.animal-container {
+.big-container {
+  margin: auto 0;
   width: 70%;
   margin: 0 auto;
   display: flex;
@@ -10,44 +11,11 @@
   margin-bottom: 30px;
   margin-top: 3%;
   gap: 2%;
+
   @include m.tablet {
     width: 85%;
   }
   @include m.desktop {
     width: 90%;
-  }
-
-  &__desc {
-    text-align: center;
-    color: black;
-    font-size: 1rem;
-    font-weight: bold;
-    margin-block-end: 0;
-    margin-block-start: 0;
-    // font-family: v.$all_text;
-  }
-
-  &__name {
-    // font-family: v.$first_page_font;
-    padding-top: 2%;
-    margin-top: 2%;
-    font-size: 2rem;
-    font-weight: bold;
-    text-align: center;
-  }
-
-  &__imgwrapper {
-    width: 60%;
-    height: 50%;
-    margin: 0;
-    position: relative;
-    border-radius: 2px;
-
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-      object-position: top;
-    }
   }
 }
