--- a/src/sections/footer/footer.scss
+++ b/src/sections/footer/footer.scss
@@ -3,6 +3,7 @@
 
 footer {
   background: v.$color-primary;
+  margin: auto 0;
   padding-top: 8rem;
   box-shadow: 0 -1rem 1.5rem hsla(v.$primary-hue, 68%, 42%, 20%);
   transition: v.$transition;
