--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@1,6..96,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mynerve&display=swap');
 $dark: #374151;
 $darker: #1f2937;
 $darker: #1f2937;
@@ -8,15 +11,15 @@ $purple: #8b5cf6;
 $light: #eee;
 $green: #68dea0;
 $myFont_family: 'Indie Flower', cursive;
-$tablet_breakpont: 600px;
-$desktop_breakpoint: 1024px;
+$tablet_breakpont: 676px;
+$desktop_breakpoint: 1200px;
 
-$primary-hue: 90;
+$primary-hue: 132;
 $black-lightness: 15%;
 $dark-lightness: 44%;
 $light-lightness: 94%;
 $white-lightness: 100%;
-$color-primary: hsl($primary-hue, 18%, 30%);
+$color-primary: hsl($primary-hue, 18%, 42);
 
 // background: hsl(270, 18%, 55%);
 // background: #8e73a4;
@@ -37,3 +40,8 @@ $border-radius-3: 0.5rem;
 
 /* GENERAL TRANSITION VARIABLE */
 $transition: all 500ms ease;
+
+// font family
+$first_page_font: ' Mynerve ', cursive, sans-serif;
+$header_font: 'EB Garamond', serif;
+$all_text: 'Bodoni Moda', serif;
