--- a/src/sections/nav/nav.scss
+++ b/src/sections/nav/nav.scss
@@ -11,7 +11,7 @@ nav {
   top: 0;
   left: 0;
   z-index: 9;
-  box-shadow: 0 1rem 1.5rem hsla(v.$primary-hue, 68%, 42%, 20%);
+  // box-shadow: 0 1rem 1.5rem hsla(v.$primary-hue, 68%, 42%, 20%);
   transition: v.$transition;
 }
 
@@ -30,11 +30,4 @@ nav {
 .nav__menu {
   display: flex;
   gap: 3.5rem;
-}
-
-#theme__icon {
-  background: transparent;
-  color: white;
-  font-size: 2rem;
-  cursor: pointer;
 }
