--- a/src/style/container.scss
+++ b/src/style/container.scss
@@ -24,7 +24,7 @@
 }
 
 /* MEDIA QUERIES (phones) */
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 600px) {
   .about__card {
     padding: 1.2rem;
   }
