--- a/src/components/singelAnimal/singelAnimal.scss
+++ b/src/components/singelAnimal/singelAnimal.scss
@@ -27,6 +27,7 @@
     gap: 1%;
     margin-top: 5%;
   }
+
   &__desc {
     text-align: center;
     color: #000;
@@ -72,6 +73,9 @@
     margin-bottom: 5px;
     font-family: v.$all_text;
     background-color: #0f0f0f;
+    transition: all 0.3s ease;
+    position: relative;
+    display: inline-block;
     &:hover {
       background-color: transparent;
       border-color: v.$color-white;
@@ -79,57 +83,15 @@
     }
   }
 }
-// .animal-container {
-//   // margin: 0 auto;
-//   max-width: 1000px;
-//   display: grid;
-//   grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
-//   grid-auto-rows: auto;
-//   gap: 20px;
 
-//   display: grid;
-//   grid-template-columns: repeat(2, 1fr);
-//   gap: 10px;
-//   font-family: sans-serif;
-//   padding-top: 30px;
-
-//   &__animal {
-//     box-sizing: border-box;
-
-// &__image {
-//   width: 100%;
-//   height: 150px;
-//   object-fit: cover;
-//   display: block;
-//   border-top: 2px solid #333333;
-//   border-right: 2px solid #333333;
-//   border-left: 2px solid #333333;
-// }
-
-//     &__content {
-//       line-height: 1.5;
-//       font-size: 0.9em;
-//       padding: 15px;
-//       background: #fafafa;
-//       border-right: 2px solid #333333;
-//       border-left: 2px solid #333333;
-//     }
-
-//     p {
-//       margin-top: 0;
-//     }
-
-//     .card__info {
-//       padding: 15px;
-//       display: flex;
-//       justify-content: space-between;
-//       align-items: center;
-//       color: #555555;
-//       background: #eeeeee;
-//       font-size: 0.8em;
-//       border-bottom: 2px solid #333333;
-//       border-right: 2px solid #333333;
-//       border-left: 2px solid #333333;
-//     }
-//   }
-// }
+.custom-btn {
+  position: relative;
+  height: 50px;
+  color: #fff;
+  border-radius: 5px;
+  padding: 10px 25px;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  background: rgb(183, 206, 17);
+}
